--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,14 +20,14 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.app"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
+        applicationId "com.bookmarker"
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+
+        manifestPlaceholders['auth0Domain'] = "@string/com_auth0_domain"
+        manifestPlaceholders['auth0Scheme'] = "@string/com_auth0_scheme"
     }
 
     buildTypes {
