--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   mesh: ^0.4.1
   mock_data: ^2.0.1
+  smooth_sheets: ^0.10.2
 
 dev_dependencies:
   flutter_test:
