--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   smooth_sheets: ^0.10.2
   forui: ^0.7.0
   collection: ^1.18.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
