--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   forui: ^0.7.0
   collection: ^1.18.0
   url_launcher: ^6.3.1
+  metadata_fetch: ^0.4.2
+  html: ^0.15.5
+  ogp_data_extract: ^0.1.4
 
 dev_dependencies:
   flutter_test:
