--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.0
+  sdk: ">=3.6.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -49,7 +49,11 @@ dependencies:
   mesh: ^0.4.1
   mock_data: ^2.0.1
   smooth_sheets: ^0.10.2
-  forui: ^0.7.0
+  forui:
+    git:
+      url: https://github.com/forus-labs/forui.git
+      ref: main
+      path: forui
   collection: ^1.18.0
   url_launcher: ^6.3.1
   metadata_fetch: ^0.4.2
